2019-07-11 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.0.

2019-06-12 belangeo <belangeo@gmail.com>

    * EPyo: Fix search ctrl behaviour in the documentation window.

2019-06-05 belangeo <belangeo@gmail.com>

    * Better handling of bad code when reading file in enbedded pyo.

2019-06-02 belangeo <belangeo@gmail.com>

    * Added a clear() method to Linseg and Expseg objects.

2019-05-14 belangeo <belangeo@gmail.com>

    * Added computer keyboard bindings when the Notein's keyboard widget has the focus.

2019-02-22 belangeo <belangeo@gmail.com>

    * Fader and Adsr now send a trigger at the end of the envelope.

2019-02-22 belangeo <belangeo@gmail.com>

    * CallAfter's time and arg arguments can be changed dynamically.

2019-01-24 belangeo <belangeo@gmail.com>

    * Jack audio backend does not ignore duplex value anymore.

2019-01-24 belangeo <belangeo@gmail.com>

    * Added two arithmetic objects: Div and Sub.

2019-01-22 belangeo <belangeo@gmail.com>

    * Changed PyoObjectBase's method preventAutoStart() for all AutoStart(switch).
    
2019-01-11 belangeo <belangeo@gmail.com>

    * Added setStopDelay method to PyoObjectBase class.

2019-01-09 belangeo <belangeo@gmail.com>

    * Added examples about multirate processing/synthesis.

2019-01-08 belangeo <belangeo@gmail.com>

    * Fixed all variant of audio arithmetic.

2018-12-28 belangeo <belangeo@gmail.com>

    * Added a new object: SVF2, a 2-pole state variable filter with many filter types.

2018-12-26 belangeo <belangeo@gmail.com>

    * Added a getPyoExamples function and changed example function to be able to
      execute one of the example.

2018-12-26 belangeo <belangeo@gmail.com>

    * Fixed SIGSEGV when multiplying a number and a base object.

2018-12-14 belangeo <belangeo@gmail.com>

    * Compiling for python 64-bit on Windows now work.

2018-12-14 belangeo <belangeo@gmail.com>

    * Fixed break-point-function tables malloc() corruption.

2018-12-14 belangeo <belangeo@gmail.com>
