@@ -1,3 +1,15 @@
+2019-09-11 belangeo <belangeo@gmail.com>
+
+    * Added a clear() method to Mixer object to delete all inputs at once.
+
+2019-09-09 belangeo <belangeo@gmail.com>
+
+    * Fixed setting value of ControlSlider from national keyboard layout.
+
+2019-09-03 belangeo <belangeo@gmail.com>
+
+    * Audio server falls back to playback-only mode if jack server has no input ports.
+
 2019-07-11 belangeo <belangeo@gmail.com>
 
     * Git tag: 1.0.0.
